force-app/main/default/objects/DSALES_AsociacionTiposUso__c/DSALES_AsociacionTiposUso__c.object-meta.xml
<CustomObject>
    <label>Asociación de tipos de uso</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nombre de Asociación de tipos de uso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asociación de tipos de usos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>