force-app/main/default/objects/DSALES_AsociacionTiposUso__c/fields/DSALES_Producto__c.field-meta.xml
<CustomField>
    <fullName>dsalesProducto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Asociación de tipos de usos</relationshipLabel>
    <relationshipName>Asociaci_n_de_tipos_de_usos</relationshipName>
    <type>Lookup</type>
</CustomField>