force-app/main/default/objects/DSALES_AsociacionTiposUso__c/fields/DSALES_TipodeUso__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoUso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionarlo al tipo de uso</description>
    <label>Tipo de Uso</label>
    <referenceTo>DSALES_TipoUso__c</referenceTo>
    <relationshipLabel>Asociación de tipos de usos</relationshipLabel>
    <relationshipName>Asociaci_n_de_tipos_de_usos</relationshipName>
    <type>Lookup</type>
</CustomField>